Bug 383195. Recreate support for repeatable table headers and footers while printing. r=bernd,sr=dbaron